Add base for theme

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,11 +1,12 @@
 :root {
     --primary-color: #0044D4;
+    --text-color: #0D2B3E;
 }
 
+// Temporal variables
 $blue: #0044D4;
 $gray: #A1B2C1;
 $red: #E53935;
 $yellow: #F1C400;
 $background: #F6F8F9;
 $light-gray: #C4CED8;
-$text: #0D2B3E;
