--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,9 @@
 // Border radius
 $border-radius: 4px;
+
+// Font Weights
+$light: 300;
+$regular: 400;
+$medium: 500;
+$semi-bold: 600;
+$bold: 700;
