Add placeholder for boostrap class

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -18,6 +18,10 @@ html {
     --secondary-font-stack: 'Montserrat', sans-serif;
 }
 
+.r-component {
+    
+}
+
 // Temporal variables
 $blue: #0044D4;
 $gray: #A1B2C1;
