--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,3 +10,19 @@ $bold: 700;
 
 // Line-height
 $line-height: 20px;
+
+// Z-Index
+$z-modal: 2000;
+$z-top: 1000;
+$z-max: 800;
+$z-mid: 500;
+$z-low: 100;
+$z-90: 90;
+$z-80: 80;
+$z-70: 70;
+$z-60: 60;
+$z-50: 50;
+$z-40: 40;
+$z-30: 30;
+$z-20: 20;
+$z-10: 10;
