feat(components): add support of mixins

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -41,7 +41,11 @@ html {
 
   --font-weight-regular: 400;
   --border-radius: 4px;
+  --muted-color: #efeef0;
 }
 
 .r-component {
 }
+
+$faint-gray: #E1E7EA;
+$light-background: #F9FAFB;
