--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,10 @@
 // Border radius
 $border-radius: 4px;
 
+// Layout rules
+$base-font-size: 10;
+$space-default: 20px;
+
 // Font Weights
 $light: 300;
 $regular: 400;
