--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,27 @@ $border-radius: 4px;
 // Layout rules
 $base-font-size: 10;
 $space-default: 20px;
+$inset-xxs: 2px 2px 2px 2px;
+$inset-xs: 4px 4px 4px 4px;
+$inset-s: 8px 8px 8px 8px;
+$inset-m: 16px 16px 16px 16px;
+$inset-l: 32px 32px 32px 32px;
+$inset-xl: 64px 64px 64px 64px;
+$stack-xxs: 0 0 2px 0;
+$stack-xs: 0 0 4px 0;
+$stack-s: 0 0 8px 0;
+$stack-m: 0 0 16px 0;
+$stack-l: 0 0 32px 0;
+$stack-xl: 0 0 64px 0;
+$space-default: 20px;
+$space-xxs: 2px;
+$space-xs: 4px;
+$space-s: 8px;
+$space-m: 16px;
+$space-l: 32px;
+$space-xl: 64px;
+$space-xxl: 128px;
+
 
 // Font Weights
 $light: 300;
@@ -11,6 +32,14 @@ $regular: 400;
 $medium: 500;
 $semi-bold: 600;
 $bold: 700;
+
+// Font Sizes
+$h1: 28px;
+$h2: 16px;
+$h3: 13px;
+$h4: 12px;
+$h5: 12px;
+$paragraph: 14px;
 
 // Line-height
 $line-height: 20px;
