build: watch the scss, complile them to scss once changed

--- a/src/style/r-badge.scss
+++ b/src/style/r-badge.scss
@@ -11,6 +11,7 @@ Rebilly 2017
     'abstracts/variables',
     'abstracts/functions',
     'abstracts/mixins';
+    //'abstracts/shared';
 
 // 2. Vendors
 //@import
