--- a/src/style/components/_icon.scss
+++ b/src/style/components/_icon.scss
@@ -2,12 +2,12 @@
 // This file contains all styles related to the icon component.
 // -----------------------------------------------------------------------------
 
-.icon {
+.r-icon {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
-    fill: $gray;
+    fill: var(--gray-color);
     color: transparent;
     display: inline-block;
     vertical-align: middle;
@@ -15,7 +15,7 @@
     @include transition(all .15s ease);
 }
 
-.icon-20 {
+.r-icon-20 {
     width: 20px;
     height: 20px;
     vertical-align: top;
@@ -30,11 +30,11 @@
 /**
 * Animations
 */
-.icon.is-spinning {
+.r-icon.is-spinning {
     @include animation('spinning 0.7s linear infinite');
 }
 
-.icon.is-ringing {
+.r-icon.is-ringing {
     transform-origin: 50% 4px;
     @include animation('ringing 4s linear infinite');
 }
@@ -75,6 +75,6 @@
     100% { @include browser-prefix(transform, rotateZ(0deg)); }
 }
 
-.icon.is-rotating-right {
+.r-icon.is-rotating-right {
     @include browser-prefix(transform, rotate(90deg));
 }
