--- a/src/style/r-button.scss
+++ b/src/style/r-button.scss
@@ -43,7 +43,7 @@ Rebilly 2017
 // 5. Components
 @import
     //'components/icon',
-    'components/button';
+    'components/button',
     //'components/badge';
     //'components/input',
     //'components/toggle',
@@ -51,7 +51,7 @@ Rebilly 2017
     //'components/list',
     //'components/loading',
     //'components/tooltip',
-    //'components/tooltip-new',
+    'components/tooltip-new';
     //'components/tile',
     //'components/chip',
     //'components/tab',
